<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Brookes Radio</string>
    <string name="action_settings">Settings</string>
    <string name="stream_radio">Listen Live!</string>
    <string name="email_radio">Email the Studio!</string>
    <string name="get_involved">Get Involved!</string>
    <string name="view_schedule">View Schedule</string>
    <string name="description_text">Oxford Brookes radio is run solely by students for students, our main aim is to share entertainment and information amongst students and to provide everyone at Oxford Brookes University with a platform from which they can make their voice heard.</string>
    <string name="contact_text">If you\'ve got an idea you\'d like to share for a show send an e-mail to Hannah Sareen - 11022129@brookes.ac.uk to book a 30 minute slot on our audition show Amateur Hour.</string>
    <string name="action_emailstudio">Email the Studio</string>
    <string name="action_facebookpage">Facebook Page</string>
    <string name="action_twitterpage">Twitter Page</string>
    <string name="app_id">668503629861396</string>
    <string name="dialog_caption">Oxford Brookes Student Radio</string>
    <string name="action_facebookshare">Share on Facebook</string>
    <string name="action_twittershare">Share on Twitter</string>
    <string name="connection_error">Connection Error</string>
    <string name="error_radio_not_online">Brookes Radio is not online, check the schedule for more details</string>
    <string name="error_no_internet">You are not connected to the Internet</string>

</resources>
